# django-smart-admin

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CHANGES.rst  MANIFEST.in  Makefile  Procfile  README.md  README.rst  codecov.yml   coverage.xml  junit.xml  mkdocs.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  runtime.txt  setup.py  tox.ini
.github/: file-filters.yml
.github/workflows/: docs.yml  issues.yml  lint.yml  merge_to_develop.yml  pypi.yml  release.yml  test.yml
src/smart_admin/: __init__.py  apps.py  autocomplete.py  changelist.py  checks.py  compat.py  decorators.py  mixins.py  modeladmin.py  settings.py  site.py  truncate.py  utils.py  views.py  widget.py
src/smart_admin/console/: __init__.py  celery.py  email.py  error_pages.py  migrations.py  redis.py  sentry.py  sysinfo.py
src/smart_admin/logs/: __init__.py  admin.py  apps.py
src/smart_admin/smart_auth/: admin.py
src/smart_admin/static/: smart_admin.css  smart_admin.css.map  smart_admin.scss
src/smart_admin/templates/: __init__.py
tests/: .coveragerc  conftest.py  test_admin.py  test_autocomplete.py  test_checks.py  test_config.py  test_console.py  test_content_type.py  test_decorators.py  test_groups.py  test_linkedobject.py  test_log.py  test_mixin.py  test_permission.py  test_site.py  test_truncate.py  test_utils.py
tests/apps/: test_auth.py  test_logs.py
tests/browser/: conftest.py  test_f_admin.py
tests/demoapp/: manage.py
tests/panels/: test_console.py  test_panel_celery.py  test_panel_email.py  test_panel_error_pages.py  test_panel_migrations.py  test_panel_redis.py  test_panel_sentry.py
(+61 files in other folders)
